@@ -62,8 +62,6 @@ ifaddr_memsize(const void *ptr)
 {
     const rb_ifaddr_t *ifaddr;
     const rb_ifaddr_root_t *root;
-    if (ptr == NULL)
-        return 0;
     ifaddr = ptr;
     root = get_root(ifaddr);
     return sizeof(rb_ifaddr_root_t) + (root->numifaddrs - 1) * sizeof(rb_ifaddr_t);
